backend-cluster/components/ingresses/argocd-ingress.yaml
# Before expose to ALB, run:
# kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "NodePort"}}'
# Recommend: enable tls, set your backend port to 443
# else: add --insecure flag to argocd-server deploy (spec.containers.command)

# TODO: set tls

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: argocd-alb
  name: argocd
  namespace: argocd
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 80
        pathType: Prefix
